Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
-"Ireland"
-"Japan"
-"Switzerland"
-"Thailand"
-"Hogwarts"
+<li>"Ireland"</li>
+<li>"Japan"</li>
+<li>"Switzerland"</li>
+<li>"Thailand"</li>
+<li>"Hogwarts"</li>
